fix difficult visibility text

--- a/assets/global.scss
+++ b/assets/global.scss
@@ -70,7 +70,7 @@ img.logo {
 
 .btn-start {
   color: #fff;
-  background-color: green;
+  background-color: #2D4C2D;
   border-color: green;
 }
 
@@ -283,6 +283,10 @@ a:hover {
 
 .text-orange {
   color: #FC7F23;
+}
+
+.text-marron {
+  color: #7C3F11;
 }
 
 .text-blanc {
